data/derived/comb/progs/unify/prog7738.ml.out
Characters 144-145:
  | (zeros, total) -> ((zeros @ [0]), (bigAdd total ((mulByDigit a wholeNum) @ zeros))) in
                                                                 ^
Error: This expression has type int list * int list
       but an expression was expected of type int
